--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,15 @@ script:
   - yarn build
 
 deploy:
-  skip_cleanup: true
   provider: surge
+  skip_cleanup: true
   domain: https://danielpiva.surge.sh
   project: ./dist/
-
-on:
-  branch: master
+  on:
+    branch: master
+  provider: surge
+  skip_cleanup: true
+  domain: https://imdanielpiva.surge.sh
+  project: ./dist/
+  on:
+    all_branches: true
