--- a/package.json
+++ b/package.json
@@ -40,8 +40,6 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "core-js": "^2.5.7",
-    "promise-polyfill": "^8.1.0"
+    "@babel/polyfill": "^7.0.0"
   }
 }
